[gd_scene load_steps=2 format=3 uid="uid://blgdqe7do210h"]

[ext_resource type="Script" path="res://village/village_ui/resource_display.gd" id="1_fa6oo"]

[node name="ResourceDisplay" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fa6oo")

[node name="ResourcePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 69.0
offset_right = -963.0
offset_bottom = -958.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcePanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="WaterContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/WaterContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/WaterContainer"]
layout_mode = 2
text = "Su"

[node name="WaterCount" type="Label" parent="ResourcePanel/HBoxContainer/WaterContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="WoodContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/WoodContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/WoodContainer"]
layout_mode = 2
text = "Tahta"

[node name="WoodCount" type="Label" parent="ResourcePanel/HBoxContainer/WoodContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FoodContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/FoodContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/FoodContainer"]
layout_mode = 2
text = "Yemek"

[node name="FoodCount" type="Label" parent="ResourcePanel/HBoxContainer/FoodContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="StoneContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/StoneContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/StoneContainer"]
layout_mode = 2
text = "Taş"

[node name="StoneCount" type="Label" parent="ResourcePanel/HBoxContainer/StoneContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="MetalContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/MetalContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/MetalContainer"]
layout_mode = 2
text = "Metal"

[node name="MetalCount" type="Label" parent="ResourcePanel/HBoxContainer/MetalContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="WorkerContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/WorkerContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/WorkerContainer"]
layout_mode = 2
text = "İşçiler"

[node name="WorkerCount" type="Label" parent="ResourcePanel/HBoxContainer/WorkerContainer"]
layout_mode = 2
text = "0/0"
horizontal_alignment = 1

[node name="HousingContainer" type="VBoxContainer" parent="ResourcePanel/HBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ResourcePanel/HBoxContainer/HousingContainer"]
layout_mode = 2
expand_mode = 4

[node name="Label" type="Label" parent="ResourcePanel/HBoxContainer/HousingContainer"]
layout_mode = 2
text = "Barınma"

[node name="HousingCount" type="Label" parent="ResourcePanel/HBoxContainer/HousingContainer"]
layout_mode = 2
text = "0/0"
horizontal_alignment = 1
